learn/Section 61 Terraform Modules Code ReUseability/1-Module2/createInstance.tf

# #################################################
# #                 1. Create aws_key_pair
# #################################################

# resource "aws_key_pair" "levelup_key" {
#     key_name = "levelup_key1"
#     public_key = file(var.PATH_TO_PUBLIC_KEY)
# }



# #################################################
# #                 1. Create aws_instance
# #################################################

# resource "aws_instance" "Instnace-public-1" {
#   ami           = lookup(var.AMIS, var.aws_region)
#   instance_type = "t2.micro"
#   key_name      = aws_key_pair.levelup_key.key_name

#   vpc_security_group_ids = [aws_security_group.allow-levelup-ssh.id]
#   # subnet_id = aws_subnet.levelupvpc-public-1.id
#   subnet_id = aws_subnet.levelupvpc-private-3.id

  

#   tags = {
#     Name = "custom_instance"
#   }

# }
